--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -25,15 +25,23 @@
         <div class="tab-content">
           <div id="home" class="container tab-pane active"><br>
             <h3>Welcome to the Articles Section</h3>
-            <p>Here You will Get to know about the different fields/career paths that you can chose for yourself. Just click on above mentioned topics to toggle.</p>
+            <div style="text-align: center;">
+              <p style="font-size: large;"><i>"The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle."" — <b>Steve Jobs</b></i></p>
+            </div>
+            <p class="article-content">Are You Confused about your career? Do you want to know about the different career paths that you can take upon to land at a perfect job in India? Then you are at the right place.</p>
+            <p class="article-content"> We have brought to you the most popular technology that you should start working on in order to get a good job in India.</p>
+            <div class="img-container mb-2" style="text-align: center;">
+              <img class="article-img" style="height: 70%;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+            </div>
+            <p class="article-content">Browse through the above categories and know more about them.</p>
           </div>
           <div id="menu1" class="container tab-pane fade"><br>
              <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Python: Introduction</h5>
                       <p class="card-text">Python is developed by Guido van Rossum. Guido van Rossum started implementing Python in 1989. Python is a very simple programming language so even if you are new to programming, you can learn python without facing any issues.</p>
@@ -46,10 +54,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-article" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About Python</h5>
                       <p class="card-text">The language has a lot of design limits and needs more testing time. The programmer has the possibility to see bugs only during run time. Python has high memory consumption and is not used in web browsers because it is not secure. Language flexibility is considered among both advantages and disadvantages of Python.</p>
@@ -62,13 +70,13 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become Python Developer</h5>
-                      <p class="card-text">In a world of Java and C++, Python is quickly making its way into the charts. Python developers are high in demand, and not so high in supply. This means they also get paid a lot. If you’re reading this, it probably means you’ve decided or are deciding to start a career in Python and want to become a Python Developer. How to land a job as a Python Developer? This article will try to answer all your queries about making a career as a Python Developer.</p>
+                      <p class="card-text">In a world of Java and C++, Python is quickly making its way into the charts. Python developers are high in demand, and not so high in supply. This means they also get paid a lot. If you’re reading this, it probably means you’ve decided or are deciding to start a career in Python and want to become a Python Developer.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'python3' %}""><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -80,10 +88,10 @@
           <div id="menu2" class="container tab-pane fade"><br>
             <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">C++: Introduction</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -96,10 +104,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About C++</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -112,10 +120,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become C++ Developer</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -130,10 +138,10 @@
           <div id="menu3" class="container tab-pane fade"><br>
             <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Machine Learning: Introduction</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -146,10 +154,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About Machine Learning</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -162,10 +170,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become Data Scientist</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -180,10 +188,10 @@
           <div id="menu4" class="container tab-pane fade"><br>
             <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Web Development: Introduction</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -196,10 +204,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About Web Development</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -212,10 +220,10 @@
               </div>
               <div class="card mb-3" >
                 <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img" alt="...">
+                  <div class="col-md-6">
+                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become Web Developer</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
