--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -24,6 +24,25 @@
     <div style="text-align: center;" class="article-subhead mb-4">
         Contact Us
     </div>
+    <div class="mt-3 mb-5">
+      <p class="article-content"><b>We are available to serve you 24 X 7. Drop a Mail Below.</b></p>
+      <div class="article-content">
+        <p class="article-content">
+          <ul>
+            <li>Have Doubts? Our Instructors are available 24 X 7.</li>
+          </ul>
+          <ul>
+            <li>Need Career Counselling? We are there for you.</li>
+          </ul>
+          <ul>
+            <li>Need any specific resources? One mail to us and you will have it in the Resources Section.</li>
+          </ul>
+          <ul>
+            <li>Any Complains/Suggestions/Feedback? You are always welcomed.</li>
+          </ul>
+        </p>
+      </div>
+    </div>
     <form action="mail" method="POST">
         {% csrf_token %}
         <div class="form-row">
