--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -5,13 +5,17 @@
 {% block content %}
 <div class="container mt-3 section2">
     <h1>Explore Our Courses</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo consequatur expedita eos. Officia natus nesciunt molestiae qui eos minima inventore impedit nostrum, vitae suscipit maiores consequuntur animi. Inventore, aut dolorum?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum id dolore ducimus qui hic eveniet, illo officiis nostrum facere dolores aliquid culpa, cum impedit reiciendis similique odio animi explicabo provident.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo consequatur expedita eos. Officia natus nesciunt molestiae qui eos minima inventore impedit nostrum, vitae suscipit maiores consequuntur animi. Inventore, aut dolorum?</p>
-</div>
+    <p class="article-content">
+      Our teams brings you <b>"THE FIRST EVER ON THE INTERNET"</b> coding tutorials in your own native language, <b>ODIA.</b>
+    </p>
+    <p class="article-content">
+      The Instructors are well versed in their fields and thus have come forward to educate the native people in the native language. We are providing you with Coding Tutorials in the programming languages like <b>Python</b> and <b>C++</b> and many more are still to come.
+    </p>
+    <p class="article-content">So <b>GET READY</b> to fly high in your career by learning from our tutorials. Browse through the below videos and <b>Get Started</b>.</p> 
+    </div>
 <div class="container mt-4 section2">
     <h1>Current Available And Ongoing Courses</h1>
-    <h3 class="mt-5">Python Tutorials</h3>
+    <h3 class="mt-5">Python Tutorials (In Odia)</h3>
     <div class="card-deck mb-2 mt-3">
         <div class="card">
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
@@ -51,7 +55,7 @@
         <a href="#"><div class="btn btn-primary">Browse All</div></a>
     </div>
     <div class="mt-2 mb-4">
-        <h3 class="mt-3 mb-3">C++ Tutorials</h3>
+        <h3 class="mt-3 mb-3">C++ Tutorials (In Odia)</h3>
     <div class="card-deck">
         <div class="card">
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
