--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,6 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+
 {% block content %}
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -33,7 +34,7 @@
 <div class="container-fluid section1">
 <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 class="text-white" style="margin-bottom: 2%;">Our Offerings</h1>
+        <h1 style="margin-bottom: 2%;">Our Offerings</h1>
     </div>
 <div class="card-deck">
     <div class="card">
@@ -90,7 +91,7 @@
 <div class="container-fluid section3 mt-5 mb-5 pc-card">
     <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 class="text-white" style="margin-bottom: 2%;">Our Instructors</h1>
+        <h1 style="margin-bottom: 2%;">Our Instructors</h1>
     </div>
     <div class="row">
         <div class="col-md-4">
@@ -173,7 +174,7 @@
         </div>
       </div>
       <div class="container mt-4" style="text-align: center;">
-        <a href="{% url 'team' %}"><div class="btn btn-primary">View All Members</div></a>
+        <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
       </div>  
     </div>
 </div>
@@ -182,7 +183,7 @@
 <div class="container-fluid section3 mt-5 mb-5 mobile-card">
     <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 class="text-white" style="margin-bottom: 2%;">Our Instructors</h1>
+        <h1 style="margin-bottom: 2%;">Our Instructors</h1>
     </div>
     <div class="row">
         <div class="card">
@@ -204,7 +205,7 @@
             </div>
           </div>
       <div class="container mt-4" style="text-align: center;">
-        <a href="{% url 'team' %}"><div class="btn btn-primary">View All Members</div></a>
+        <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
       </div>  
     </div>
 </div>
