--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -6,7 +6,7 @@
 <div class="container mt-3 section2">
     <h1>Resources</h1>
 </div>
-<div class="container mt-4 mb-4">
+<div class="container mt-3 mb-2">
     <div class="container mt-3">
         <br>
         <ul class="nav nav-tabs reset-nav">
@@ -24,9 +24,18 @@
           </li>
         </ul>
         <div class="tab-content">
-          <div id="home" class="container tab-pane active"><br>
-            <h3>Welcome to the Resources Section</h3>
-            <p>Here You will Get all Kinds of resources as per your needs. Just clink on above mentioned topics to toggle.</p>
+          <div id="home" class="container tab-pane active mt-4 mb-4"><br>
+            <h3 class="mb-3">Welcome to the Resources Section</h3>
+            <div style="text-align: center;">
+              <p style="font-size: large;"><i>"Education is the passport to the future, for tomorrow belongs to those who prepare for it today." – <b>Malcolm X</b></i></p>
+            </div>
+            <p class="article-content">We as a team who provide the students with technical knowledge will never step back in providing the most important thing that they need in their study life, <b>"Resources and Study Materials"</b></p>
+            <div class="img-container mb-2" style="text-align: center;">
+              <img class="article-img" style="height: 70%;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+            </div>
+          <p class="article-content mb-4">
+            Browse through the above categories to access the resources and download them.
+          </p>
           </div>
           <div id="menu1" class="container tab-pane fade"><br>
             {% for python in pythons %}
