--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
     <style>
         .nav-link{
-            font-size: 1.1rem;
-            margin: 1.1%;
+            font-size: 1.2rem;
+            margin: 1.6%;
         }
     </style>
 </head>
@@ -26,11 +26,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+                    
+                    <a class="nav-link active" href="/">Home</a>
                     <a class="nav-link" href="{% url 'explore' %}">Explore</a>
                     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
                     <a class="nav-link" href="{% url 'articles' %}">Articles</a>
-                    <a class="nav-link" href="{% url 'team' %}">Team</a>
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                 </div>
@@ -50,6 +50,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
                     <h5 class="font-weight-bold text-uppercase" style="margin: 10%;">PathaPadha.com</h5>
+                    <h5 class="font-weight-bold text-uppercase" style="margin: 10%;">ପାଠପଢା.com</h5>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" style="text-align: center;">
                         <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Contact</h5>
