--- a/main/templates/main/privacy.html
+++ b/main/templates/main/privacy.html
@@ -2,68 +2,133 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <h1>Privacy Policy</h1>
-    <p>This privacy policy has been compiled to better serve those who are concerned with how their ‘Personally Identifiable Information’ (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
-
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center;">
+        Privacy Policy
+    </div>
+    <p class="article-content">
+        This privacy policy has been compiled to better serve those who are concerned with how their ‘Personally Identifiable Information’ (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
+    </p>
+    <p class="article-subhead">
         What personal information do we collect from the people that visit our blog, website or app?
-        When ordering or registering on our site, as appropriate, you may be asked to enter your name, email address or other details to help you with your experience.
-        
+    </p>
+    <p class="article-content">
+        When submitting feedback on our website, as appropriate, you may be asked to enter your name, email address or other details to help you with your experience.
+    </p>
+    <p class="article-subhead">
         When do we collect information?
-        We collect information from you when you register on our site or enter information on our site.
-        
+    </p>
+    <p class="article-content">
+        We collect information from you when you submit feedback on our site or enter information on our site.
+    </p>
+    <p class="article-subhead">
         How do we use your information?
-        We may use the information we collect from you when you register, make a purchase, sign up for our newsletter, respond to a survey or marketing communication, surf the website, or use certain other site features just to ask for ratings and reviews of services or products.
-        
+    </p>
+    <p class="article-content">
+        We use your information when you submit feedback on our website and then our team contacts you or to let you know about new offers provided by us.
+    </p>
+    <p class="article-subhead">
         How do we protect your information?
-        We do not use vulnerability scanning and/or scanning to PCI standards
-        We only provide articles and information
-        We never ask for credit card numbers
-        We use regular Malware Scanning
-        We use an SSL certificate
+    </p>
+    <p class="article-content">
+        <ul>
+            <li>We do not use vulnerability scanning and/or scanning to PCI standards</li>
+        </ul>
+        <ul>
+            <li>We only provide articles and information</li>
+        </ul>
+        <ul>
+            <li>We never ask for credit card numbers</li>
+        </ul>
+        <ul>
+            <li>We use regular Malware Scanning</li>
+        </ul>
+        <ul>
+            <li>We use an SSL certificate</li>
+        </ul>
+    </p>
+    <p class="article-subhead">
         Do we use ‘cookies’?
+    </p>
+    <p class="article-content">
         We do not use cookies for tracking purposes. You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since browser is a little different, look at your browser’s Help Menu to learn the correct way to modify your cookies. If you turn cookies off, Some of the features that make your site experience more efficient may not function properly, that make your site experience more efficient and may not function properly.
-        
+    </p>
+    <p class="article-subhead">
         Third-party disclosure
+    </p>
+    <p class="article-content">
         We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information unless we provide users with advance notice. This does not include website hosting partners and other parties who assist us in operating our website, conducting our business, or serving our users, so long as those parties agree to keep this information confidential. We may also release information when it’s release is appropriate to comply with the law, enforce our site policies, or protect ours or others’ rights, property or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.
-        
-        Third-party links
-        We do not include or offer third-party products or services on our website.
-        
+    </p>
+    <p class="article-subhead">
         Google
+    </p>
+    <p class="article-content">
         Google’s advertising requirements can be summed up by Google’s Advertising Principles. They are put in place to provide a positive experience for users. Please visit the following link: https://support.google.com/adwordspolicy/answer/1316548?hl=en We may use Google AdSense Advertising on our website. Google, as a third-party vendor, uses cookies to serve ads on our site. Google’s use of the DART cookie enables it to serve ads to our users based on previous visits to our site and other sites on the Internet. Users may opt-out of the use of the DART cookie by visiting the Google Ad and Content Network privacy policy.
-        
+    </p>
+    <p class="article-subhead">
         We may implement the following:
-        Remarketing with Google AdSense
-        Google Display Network Impression Reporting
-        Demographics and Interests Reporting
-        DoubleClick Platform Integration
+    </p>
+    <p class="article-content">
+        <ul>
+            <li>Remarketing with Google AdSense</li>
+        </ul>
+        <ul>
+            <li>Google Display Network Impression Reporting</li>
+        </ul>
+        <ul>
+            <li>Demographics and Interests Reporting</li>
+        </ul>
+        <ul>
+            <li>DoubleClick Platform Integration</li>
+        </ul>
+    </p>
+    <p class="article-content">
         We, along with third-party vendors such as Google use first-party cookies (such as the Google Analytics cookies) and third-party cookies (such as the DoubleClick cookie) or other third-party identifiers together to compile data regarding user interactions with ad impressions and other ad service functions as they relate to our website.
-        
+    </p>
+    <p class="article-subhead">
         Opting out:
+    </p>
+    <p class="article-content">
         Users can set preferences for how Google advertises to you using the Google Ad Settings page. Alternatively, you can opt out by visiting the Network Advertising Initiative Opt Out page or by using the Google Analytics Opt Out Browser add on.
-        
+    </p>
+    <p class="article-subhead">
         California Online Privacy Protection Act
-        CalOPPA is the first state law in the nation to require commercial websites and online services to post a privacy policy. The law’s reach stretches well beyond California to require any person or company in the United States (and conceivably the world) that operates websites collecting Personally Identifiable Information from California consumers to post a conspicuous privacy policy on its website stating exactly the information being collected and those individuals or companies with whom it is being shared. – See more at:http://consumercal.org/california-online-privacy-protection-act- caloppa/#sthash.0FdRbT51.dpuf
-        According to CalOPPA, we agree to the following: Users can visit our site anonymously. Once this privacy policy is created, we will add a link to it on our home page or as a minimum, on the first significant page after entering our website. Our Privacy Policy link includes the word ‘Privacy’ and can easily be found on the page specified above. You will be notified of any Privacy Policy changes:
-        • On our Privacy Policy Page
-        Can change your personal information:
-        • By logging in to your account
-        
+    </p>
+    <p class="article-content">
+        CalOPPA is the first state law in the nation to require commercial websites and online services to post a privacy policy. The law’s reach stretches well beyond California to require any person or company in the United States (and conceivably the world) that operates websites collecting Personally Identifiable Information from California consumers to post a conspicuous privacy policy on its website stating exactly the information being collected and those individuals or companies with whom it is being shared. – See more at: <a href="http://consumercal.org/california-online-privacy-protection-act- caloppa/#sthash.0FdRbT51.dpuf">http://consumercal.org/california-online-privacy-protection-act- caloppa/#sthash.0FdRbT51.dpuf</a>
+    </p>
+    <p class="article-content">
+        According to CalOPPA, we agree to the following: Users can visit our site anonymously. Once this privacy policy is created, we will add a link to it on our home page or as a minimum, on the first significant page after entering our website. Our Privacy Policy link includes the word ‘Privacy’ and can easily be found on the page specified above.
+    </p>
+    <p class="article-subhead">
         How does our site handle Do Not Track signals?
+    </p>
+    <p class="article-content">
         We honour Do Not Track signals and Do Not Track, plant cookies, or use advertising when a Do Not Track (DNT) browser mechanism is in place.
-        
+    </p>
+    <p class="article-subhead">
         Does our site allow third-party behavioural tracking?
-        It’s also important to note that we do not allow third-party behavioural tracking
-        
+    </p>
+    <p class="article-content">
+        It’s also important to note that we do not allow third-party behavioural tracking.
+    </p>
+    <p class="article-subhead">
         COPPA (Children Online Privacy Protection Act)
-        When it comes to the collection of personal information from children under the age of 13 years old, the Children’s Online Privacy Protection Act (COPPA) puts parents in control. The Federal Trade Commission, United States’ consumer protection agency, enforces the COPPA Rule, which spells out what operators of websites and online services must do to protect children’s privacy and safety online.
-        We do not specifically market to children under the age of 13 years old. Do we let third- parties, including ad networks or plug-ins collect PII from children under 13?
-        
+    </p>
+    <p class="article-content">
+        When it comes to the collection of personal information from children under the age of 13 years old, the Children’s Online Privacy Protection Act (COPPA) puts parents in control. The Federal Trade Commission, United States’ consumer protection agency, enforces the COPPA Rule, which spells out what operators of websites and online services must do to protect children’s privacy and safety online. We do not specifically market to children under the age of 13 years old. Do we let third- parties, including ad networks or plug-ins collect PII from children under 13?
+    </p>
+    <p class="article-subhead">
         Fair Information Practices
+    </p>
+    <p class="article-content">
         The Fair Information Practices Principles form the backbone of privacy law in the United States and the concepts they include have played a significant role in the development of data protection laws around the globe. Understanding the Fair Information Practice Principles and how they should be implemented is critical to comply with the various privacy laws that protect personal information.
-        
+    </p>
+    <p class="article-subhead">
         In order to be in line with Fair Information Practices we will take the following responsive action, should a data breach occur:
-        We will notify the users via in-site notification within a month. We also agree to the Individual Redress Principle which requires that individuals have the right to legally pursue enforceable rights against data collectors and processors who fail to adhere to the law. This principle requires not only that individuals have enforceable rights against data users, but also that individuals have recourse to courts or government agencies to investigate and/or prosecute non-compliance by data processors.</p>
+    </p>
+    <p class="article-content">
+        We will notify the users via in-site notification within a month. We also agree to the Individual Redress Principle which requires that individuals have the right to legally pursue enforceable rights against data collectors and processors who fail to adhere to the law. This principle requires not only that individuals have enforceable rights against data users, but also that individuals have recourse to courts or government agencies to investigate and/or prosecute non-compliance by data processors.
+    </p>
 </div>
 {% endblock %}
