minor mistake in contact fixed

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -38,7 +38,7 @@
             <li>Need any specific resources? One mail to us and you will have it in the Resources Section.</li>
           </ul>
           <ul>
-            <li>Any Complains/Suggestions/Feedback? You are always welcomed.</li>
+            <li>Any Complains / Suggestions / Feedback? You are always welcomed.</li>
           </ul>
         </p>
       </div>
