--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -169,6 +169,7 @@ svg{
   
   .article-content {
     font-size: 1.3em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   
   .img-container {
