--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand logo" href="/">PathaPadha.com</a>
+            <a class="navbar-brand logo" href="/">PathaPadha.in</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg" style="color: white;">
                     <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
@@ -49,17 +49,17 @@
                 <p>An Initiative for the Advancement of Technical Skills of Students of Odisha by Teaching them Coding in Our Native Language.</p>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
-                    <h5 class="font-weight-bold text-uppercase" style="margin: 10%;">PathaPadha.com</h5>
-                    <h5 class="font-weight-bold text-uppercase" style="margin: 10%;">ପାଠପଢା.com</h5>
+                    <h5 class="font-weight-bold text-uppercase" style="margin: 10%;">PathaPadha.in</h5>
+                    <h5 class="font-weight-bold text-uppercase" style="margin: 10%;">ପାଠପଢା.in</h5>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" style="text-align: center;">
                         <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Contact</h5>
                         <p>
                           <i class="fas fa-home mr-3"></i>Bhubaneswar, Odisha , India</p>
                         <p>
-                          <i class="fas fa-envelope mr-3"></i>info@example.com</p>
+                          <i class="fas fa-envelope mr-3"></i>in.pathapadha@gmail.com</p>
                         <p>
-                          <i class="fas fa-phone mr-3"></i>+91-9999999999</p>
+                          <i class="fas fa-phone mr-3"></i>+91-8249180488</p>
                 </div>
             </div>
         <hr>
@@ -92,7 +92,7 @@
         </ul>
         <a href="{% url 'privacy' %}">
             <div class="footer-copyright text-center py-3">© 2020 Copyright: 
-            <a class="footer-copyright text-center py-3"> PathaPadha.com</a>
+            <a class="footer-copyright text-center py-3"> PathaPadha.in</a>
             </div>
         </a>
     </footer>
